[gd_scene load_steps=3 format=2]

[ext_resource path="res://Node.gd" type="Script" id=1]
[ext_resource path="res://MensajePerdiste.tscn" type="PackedScene" id=2]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1026.0
margin_bottom = 598.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1026.0

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]

[node name="TextureButton2" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 4.0
margin_right = 4.0

[node name="TextureButton3" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 8.0
margin_right = 8.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 4.0
margin_right = 1026.0
margin_bottom = 4.0

[node name="TextureButton4" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]

[node name="TextureButton5" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 4.0
margin_right = 4.0

[node name="TextureButton6" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 8.0
margin_right = 8.0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 8.0
margin_right = 1026.0
margin_bottom = 8.0

[node name="TextureButton7" type="TextureButton" parent="VBoxContainer/HBoxContainer3"]

[node name="TextureButton8" type="TextureButton" parent="VBoxContainer/HBoxContainer3"]
margin_left = 4.0
margin_right = 4.0

[node name="TextureButton9" type="TextureButton" parent="VBoxContainer/HBoxContainer3"]
margin_left = 8.0
margin_right = 8.0

[node name="MensajePerdiste" parent="." instance=ExtResource( 2 )]

[connection signal="button_up" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/TextureButton2" to="." method="_on_TextureButton2_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/TextureButton3" to="." method="_on_TextureButton3_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer2/TextureButton4" to="." method="_on_TextureButton4_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer2/TextureButton5" to="." method="_on_TextureButton5_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer2/TextureButton6" to="." method="_on_TextureButton6_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer3/TextureButton7" to="." method="_on_TextureButton7_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer3/TextureButton8" to="." method="_on_TextureButton8_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer3/TextureButton9" to="." method="_on_TextureButton9_button_up"]
[connection signal="button_up" from="MensajePerdiste/VBoxContainer/Button" to="." method="_on_Button_button_up"]

[editable path="MensajePerdiste"]
